checking in updates to the navbar with a place holder of the timer

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,19 @@
+body {
+    background-color: gray;
+}
 
+.question {
+    /* position: absolute; */
+    top: 50px;
+  }
 
+  .HS {
+      text-align: left;
+  }
 
 
 @media screen and (max-width: 768px) {
-    main {
-        margin: 0 auto;
-    }
-    main .row {
-        background: url(../img/background.jpg), radial-gradient(#e6e6e6, #212121) right top;
-    }
     .row {
         margin: 0 auto;
-    }
-    #time-left-mobile {
-        display: block;
     }
 }
